--- a/style.css
+++ b/style.css
@@ -67,10 +67,11 @@ header.sticky{
     padding: 12px 10%;
 }
 
-.logo{
-    font-size: 26px;
-    font-weight: 700;
-    letter-spacing: 1px;
+img{
+    width: 100px; 
+    height: auto; 
+    display: block; 
+    margin: 0;
 
 }
 
