--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ span{
     cursor: pointer;
     position: fixed;
     top: 20px;
-    left: 1px;
+    right: 40px;
     margin-left: 25px;
     background: var(--hover-color);
     border-radius: 3px;
